[package]
name = "tests"
version = "1.0.0"
description = "Unit testing for the Subspace runtime."
authors = ["Commune Community"]
homepage = "https://commune.com"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/commune-ai/subspace"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

[dev-dependencies]
sha2.workspace = true
rsa.workspace = true
bty = { workspace = true }
csv = "1.1"

ow_extensions = { path = "../ow_extensions" }

frame-support = { workspace = true, features = ["std"] }
frame-system = { workspace = true, features = ["std"] }
log = { workspace = true }
pallet-balances = { workspace = true }

pallet-governance = { path = "../pallets/governance", features = ["std"] }

pallet-governance-api = { path = "../pallets/governance/api" }
pallet-offworker = { path = "../pallets/offworker" }
pallet-subnet-emission = { path = "../pallets/subnet_emission", features = [
    "std",
] }
pallet-subnet-emission-api = { path = "../pallets/subnet_emission/api" }
pallet-subspace = { path = "../pallets/subspace", features = ["std"] }

parity-scale-codec = { workspace = true, default-features = false, features = [
    "derive",
    "std",
] }
rand = { workspace = true }
scale-info = { workspace = true, default-features = false, features = [
    "derive",
    "std",
] }
serde_json = { workspace = true }
sp-arithmetic = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }

sp-std = { workspace = true }
sp-tracing = { workspace = true }
substrate-fixed = { workspace = true }
