[package]
name = "pallet-faucet"
version = "1.0.0"
description = "FRAME pallet for runtime logic of Subspace Blockchain."
authors = ["Commune Community"]
homepage = "https://communeai.org/"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/commune-ai/subspace"

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["scale-info"]

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "parity-scale-codec/std",
    "pallet-subspace/std",
    "scale-info/std",
    "sp-std/std",
]
try-runtime = ["frame-support/try-runtime"]
testnet = []

[dependencies]
frame-support = { workspace = true }
frame-system = { workspace = true }
log = { workspace = true }

pallet-subspace = { path = "../subspace", default-features = false }

parity-scale-codec = { workspace = true, default-features = false, features = [
    "derive",
] }
scale-info = { workspace = true, default-features = false, features = [
    "derive",
] }
sp-core = { workspace = true }

sp-runtime = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
pallet-balances = { workspace = true, features = ["std"] }
sp-io = { workspace = true }
sp-tracing = { workspace = true }
