[package]
name = "pallet-governance"
version = "1.0.0"
description = "FRAME pallet for runtime logic of Subspace Blockchain."
authors = ["Commune Nucleus Team"]
homepage = "https://commune.com"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/commune-ai/subspace"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "parity-scale-codec/std",
    "pallet-subspace/std",
    "scale-info/std",
]
try-runtime = ["frame-support/try-runtime"]

[dependencies]
bty.workspace = true
log.workspace = true

pallet-subspace = { path = "../subspace", default-features = false }

frame-support.workspace = true
frame-system.workspace = true

sp-std.workspace = true

parity-scale-codec = { workspace = true, default-features = false, features = [
    "derive",
] }
scale-info = { workspace = true, default-features = false, features = [
    "derive",
] }

[dev-dependencies]
