[package]
name = "pallet-governance"
version = "1.1.1"
description = "FRAME pallet for runtime logic of Subspace Blockchain."
authors = ["Commune Community"]
homepage = "https://communeai.org/"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/commune-ai/subspace"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking/std",
    "parity-scale-codec/std",
    "pallet-subspace/std",
    "scale-info/std",
    "sp-std/std",
]
try-runtime = ["frame-support/try-runtime"]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]

[dependencies]
log.workspace = true

pallet-governance-api = { path = "../governance/api", default-features = false }
pallet-subspace = { path = "../subspace", default-features = false }

frame-support.workspace = true
frame-system.workspace = true

sp-runtime.workspace = true
sp-std.workspace = true

substrate-fixed.workspace = true

parity-scale-codec = { workspace = true, default-features = false, features = [
    "derive",
] }
scale-info = { workspace = true, default-features = false, features = [
    "derive",
] }

frame-benchmarking = { workspace = true, optional = true }


[dev-dependencies]
pallet-balances = { workspace = true, features = ["std"] }
pallet-governance-api = { path = "./api", default-features = false }
sp-io.workspace = true
sp-tracing.workspace = true
