[package]
name = "pallet-subnet-emission"
version = "1.0.1"
description = "FRAME pallet for runtime logic of Subspace Blockchain."
authors = ["Commune Community"]
homepage = "https://commune.com"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/commune-ai/subspace"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["std"]
std = [
    "frame-support/std",
    "parity-scale-codec/std",
    "frame-system/std",
    "pallet-subspace/std",
    "scale-info/std",
]
try-runtime = ["frame-support/try-runtime"]

[dependencies]
bty = { workspace = true }
ow_extensions = { path = "../../ow_extensions", default-features = false }

frame-support = { workspace = true }
frame-system = { workspace = true }
log = { workspace = true }
pallet-balances = { workspace = true }
pallet-governance-api = { path = "../governance/api", default-features = false }

pallet-subnet-emission-api = { path = "../subnet_emission/api", default-features = false }
pallet-subspace = { path = "../subspace", default-features = false }

parity-scale-codec = { workspace = true, default-features = false, features = [
    "derive",
] }
scale-info = { workspace = true, default-features = false, features = [
    "derive",
] }
sp-arithmetic = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }

sp-std = { workspace = true }
sp-tracing = { workspace = true }

substrate-fixed = { workspace = true }

[dev-dependencies]
